--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   height: 1000px;
   background: #fff;
   box-sizing: border-box;
+  background-image: url(./background.png);
 }
 
 .header {
