--- a/style.sass
+++ b/style.sass
@@ -12,6 +12,7 @@ body
     height: 1000px
     background: #fff
     box-sizing: border-box
+    background-image: url(./background.png)
 
 .header
     display: flex
