--- a/index.pug
+++ b/index.pug
@@ -6,36 +6,38 @@ html(lang="en")
         title Hobby
         link(rel="stylesheet", href="style.css")
         link(rel="shortcut icon", href="favicon.png", type="image/x-icon")
-    body 
-        .container 
-            main.main 
-                header.header 
+    body
+        .container
+            main.main
+                header.header
                     img.header__decoration-flower(src="./decoration-flower.png", alt="")
-                    .header__logo 
+                    .header__logo
                         img.logo-img(src="./favicon.png", alt="")
                         .logo-text Hobby
 
-                    ul.nav 
-                        li.nav__item 
+                    ul.nav
+                        li.nav__item
                             a.nav__link Home
-                        li.nav__item 
+                        li.nav__item
                             a.nav__link About Us
-                        li.nav__item 
+                        li.nav__item
                             a.nav__link Service
-                        li.nav__item 
-                            a.nav__link Contact    
+                        li.nav__item
+                            a.nav__link Contact
 
                         button.header__button Login
 
-                section.hero 
-                    .hero__title Make a 
-                        span Beautiful Garden 
+                section.hero
+                    .hero__title Make a
+                        span Beautiful Garden
                         | with Your own Hand
                     .hero__description There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
-                    button.hero__button Shop Now 
+                    button.hero__button Shop Now
                         img.button-img(src="./hero-button-arrow.png", alt="")
-                    
+
                     img.hero__img(src="./hero-img.png", alt="")
-                    
+
                     img.hero__decoration-arrow(src="./decoration-arrow.png", alt="")
                     img.hero__decoration-cactus(src="./decoration-cactus.png", alt="")
+
+						.milana-section
