--- a/style.sass
+++ b/style.sass
@@ -1,3 +1,4 @@
+@import "milana-section"
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap')
 @import url(https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap)
 body
