--- a/style.sass
+++ b/style.sass
@@ -1,4 +1,7 @@
 @import "milana-section"
+@import "oleksiy-section"
+@import "seva-section"
+@import "stanislav-section"
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap')
 @import url(https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap)
 body
