--- a/index.pug
+++ b/index.pug
@@ -40,4 +40,14 @@ html(lang="en")
                     img.hero__decoration-arrow(src="./decoration-arrow.png", alt="")
                     img.hero__decoration-cactus(src="./decoration-cactus.png", alt="")
 
-						.milana-section
+            section.profesional-garden
+                .df-photo
+                    img.profesional-garden__photo-garden(src="/photo-profisional.png", alt="")
+                .df-text
+                    h1.profesional-garden__big-green-text We Are Professional Gardener!
+                    p.profesional-garden__paragraph-text Morbi magna metus, scelerisque at risus a, tristique laoreet orci. Duis posuere eros vel dui pulvinar, pulvinar molestie erat iaculis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia.
+                    .df-button     
+                        button.profesional-garden__read-more Read More
+                            img.read-more__photo-button(src="/button-green.png", alt="")
+                        img.profesional-garden__img-button(src="/Group.png", alt="")
+                  
