add stas section

--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@
   top: 1362px;
   left: 218px;
   display: flex;
+  padding: 114px 220px;
 }
 .profesional-garden__big-green-text {
   font-family: "Questrial", serif;
