--- a/_stanislav-section.sass
+++ b/_stanislav-section.sass
@@ -59,6 +59,7 @@
     top: 1362px
     left: 218px
     display: flex
+    padding: 114px 220px
 
     &__big-green-text
         font-family: "Questrial", serif
