--- a/index.pug
+++ b/index.pug
@@ -2,17 +2,17 @@ doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        meta(name="viewport" content="width=device-width, initial-scale=1.0")
         title Hobby
-        link(rel="stylesheet", href="style.css")
-        link(rel="shortcut icon", href="favicon.png", type="image/x-icon")
+        link(rel="stylesheet" href="style.css")
+        link(rel="shortcut icon" href="favicon.png" type="image/x-icon")
     body
         .container
             main.main
                 header.header
-                    img.header__decoration-flower(src="./decoration-flower.png", alt="")
+                    img.header__decoration-flower(src="./decoration-flower.png" alt="")
                     .header__logo
-                        img.logo-img(src="./favicon.png", alt="")
+                        img.logo-img(src="./favicon.png" alt="")
                         .logo-text Hobby
 
                     ul.nav
@@ -33,21 +33,22 @@ html(lang="en")
                         | with Your own Hand
                     .hero__description There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
                     button.hero__button Shop Now
-                        img.button-img(src="./hero-button-arrow.png", alt="")
+                        img.button-img(src="./hero-button-arrow.png" alt="")
 
-                    img.hero__img(src="./hero-img.png", alt="")
+                    img.hero__img(src="./hero-img.png" alt="")
 
-                    img.hero__decoration-arrow(src="./decoration-arrow.png", alt="")
-                    img.hero__decoration-cactus(src="./decoration-cactus.png", alt="")
+                    img.hero__decoration-arrow(src="./decoration-arrow.png" alt="")
+                    img.hero__decoration-cactus(src="./decoration-cactus.png" alt="")
 
             section.profesional-garden
                 .df-photo
-                    img.profesional-garden__photo-garden(src="/photo-profisional.png", alt="")
+                    img.profesional-garden__photo-garden(src="/photo-profisional.png" alt="")
                 .df-text
                     h1.profesional-garden__big-green-text We Are Professional Gardener!
                     p.profesional-garden__paragraph-text Morbi magna metus, scelerisque at risus a, tristique laoreet orci. Duis posuere eros vel dui pulvinar, pulvinar molestie erat iaculis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia.
                     .df-button     
                         button.profesional-garden__read-more Read More
-                            img.read-more__photo-button(src="/button-green.png", alt="")
-                        img.profesional-garden__img-button(src="/Group.png", alt="")
-                  
+                            img.read-more__photo-button(src="/button-green.png" alt="")
+                        img.profesional-garden__img-button(src="/Group.png" alt="")
+
+              
