--- a/index.pug
+++ b/index.pug
@@ -52,3 +52,9 @@ html(lang="en")
                         img.profesional-garden__img-button(src="/Group.png" alt="")
 
               
+         section.survey-form
+            h1.survey-form__title Ready to bring idea for your garden?
+            p.survey-form__text I must explain to you how all this mistaken idea of denouncing      pleasure and  praising pain was born and I will give you a complete
+            form.form(action="")
+                input.form__input(type="text")(placeholder="Enter your email...")
+                button.form__buttons Subscribe
