виправлення помилок, перенесення фото в папку...

--- a/style.sass
+++ b/style.sass
@@ -1,4 +1,5 @@
 @import "milana-section"
+@import "nastya-section"
 @import "oleksiy-section"
 @import "seva-section"
 @import "stanislav-section"
@@ -13,10 +14,12 @@ body
 .container
     position: relative
     width: 1600px
-    height: 1000px
+    height: 4815px
     background: #fff
     box-sizing: border-box
-    background-image: url(./background.png)
+    background-image: url(./src/img/background.png)
+
+
 
 .header
     display: flex
@@ -71,6 +74,7 @@ body
         font-style: normal
         font-weight: 600
         line-height: normal
+        cursor: pointer
 
 .hero
     position: relative
@@ -81,7 +85,7 @@ body
         height: 216.683px
         flex-shrink: 0
         color: #374A3D
-        font-family: "Fredoka One"
+        font-family: Fredoka One
         font-size: 72px
         font-style: normal
         font-weight: 400
