--- a/style.css
+++ b/style.css
@@ -1,87 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
 @import url(https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap);
-.group-text {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-}
-
-.section-box {
-  width: 1170px;
-  height: 234.6785430908px;
-  top: 985.75px;
-  left: 215px;
-  border-radius: 28px;
-  background: #ffffff;
-  padding: 10px;
-  box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
+@import url(https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap);
+.profesional-garden {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-.section-box__big-black-text {
-  font-family: Fredoka One;
-  font-weight: 400;
-  font-size: 30px;
-  line-height: 40px;
-  letter-spacing: 0%;
-  width: 289.5261230469px;
-  height: 86.5843429565px;
-  top: 1034.39px;
-  left: 366.51px;
-  color: #374A3D;
-}
-.section-box__paragraph-text {
-  width: 310.9908752441px;
-  height: 50.5130157471px;
-  top: 1130.11px;
-  left: 366.51px;
-  font-family: Gilroy;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 26px;
-  letter-spacing: 0%;
-  color: #5B7262;
-}
-.section-box__numbers {
-  font-weight: 800;
-  font-size: 60px;
-  line-height: 42px;
-  letter-spacing: 0%;
-  color: #0CA941;
-}
-.section-box__down-numbers {
-  font-weight: 400;
-  font-size: 36px;
-  line-height: 42px;
-  letter-spacing: 0%;
-  color: #678570;
-}
-
-.profesional-garden {
-  margin-top: 100px;
-  width: 1151px;
   height: 527px;
-  top: 1362px;
-  left: 218px;
-  display: flex;
   padding: 114px 220px;
 }
 .profesional-garden__big-green-text {
-  font-family: "Questrial", serif;
-  font-weight: 400;
-  font-size: 36px;
-  line-height: 44px;
-  letter-spacing: 0%;
   width: 353px;
-  height: 79px;
-  top: 1411.74px;
-  left: 912.08px;
+  height: 79.209px;
+  flex-shrink: 0;
   color: #374A3D;
+  font-family: "Fredoka One";
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 44px;
+  font-variant: small-caps;
 }
 .profesional-garden__paragraph-text {
-  font-family: Gilroy;
+  font-family: Questrial;
   font-weight: 500;
   font-size: 18px;
   line-height: 32px;
@@ -93,7 +34,7 @@
   color: #678570;
 }
 .profesional-garden__read-more {
-  font-family: Gilroy;
+  font-family: Questrial;
   font-weight: 600;
   font-size: 18px;
   line-height: 18px;
@@ -111,38 +52,26 @@
   padding: 10px 20px;
   border: 2px solid #0CA941;
   border-radius: 50%;
-  background: #ffffff;
 }
 
 .df-text {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 35px;
-  width: 457px;
-  height: 383px;
-  top: 1411.74px;
-  left: 912.08px;
+  justify-content: space-between;
+  width: 457.917px;
+  height: 383.741px;
+  flex-shrink: 0;
 }
 
 .df-photo {
   width: 637px;
   height: 527px;
-  top: 1362.61px;
-  left: 218px;
 }
 
 .df-button {
   display: flex;
+  align-items: center;
   gap: 30px;
-}
-
-.group-text-complete {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: column;
 }
 
 body {
@@ -157,10 +86,10 @@ body {
 .container {
   position: relative;
   width: 1600px;
-  height: 1000px;
+  height: 4815px;
   background: #fff;
   box-sizing: border-box;
-  background-image: url(./background.png);
+  background-image: url(./src/img/background.png);
 }
 
 .header {
@@ -218,6 +147,7 @@ body {
   font-style: normal;
   font-weight: 600;
   line-height: normal;
+  cursor: pointer;
 }
 
 .hero {
@@ -229,7 +159,7 @@ body {
   height: 216.683px;
   flex-shrink: 0;
   color: #374A3D;
-  font-family: "Fredoka One";
+  font-family: Fredoka One;
   font-size: 72px;
   font-style: normal;
   font-weight: 400;
