підключили секцію Сєви, виправлення помилок💪💪💪

--- a/style.sass
+++ b/style.sass
@@ -1,8 +1,3 @@
-@import "milana-section"
-@import "nastya-section"
-@import "oleksiy-section"
-@import "seva-section"
-@import "stanislav-section"
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap')
 @import url(https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap)
 body
@@ -24,7 +19,7 @@ body
 .header
     display: flex
     justify-content: space-between
-    padding: 48px 215px
+    padding: 28px 215px 0 215px
 
     &__logo
         display: flex
@@ -135,3 +130,10 @@ body
         position: absolute
         bottom: 210px
         left: 452px
+
+
+@import "milana-section"
+@import "nastya-section"
+@import "oleksiy-section"
+@import "seva-section"
+@import "stanislav-section"
