--- a/_seva-section.sass
+++ b/_seva-section.sass
@@ -1,22 +1,16 @@
 @import url(https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap)
 @import url(https://fonts.googleapis.com/css2?family=Questrial&display=swap)
 
-body
-    font-family: 'Questrial', sans-serif
-    margin: 0 auto
-    display: flex
-    justify-content: center
-
 .survey-form
-    margin-left: 215px
     width: 1170px
     height: 508px
     border-radius: 19px
-    background: rgba(248, 248, 248, 1)
     display: flex
     justify-content: center
     flex-direction: column
     align-items: center
+    background: #F8F8F8
+    margin-left: 218px
 
 .survey-form__title
     font-family: 'Fredoka One', display
