--- a/index.pug
+++ b/index.pug
@@ -10,15 +10,9 @@ html(lang="en")
         .container
             main.main
                 header.header
-
-                    img.header__decoration-flower(src="./decoration-flower.png" alt="")
+                    img.header__decoration-flower(src="./src/img/decoration-flower.png" alt="")
                     .header__logo
-                        img.logo-img(src="./favicon.png" alt="")
-
-                    img.header__decoration-flower(src="./src/img/decoration-flower.png", alt="")
-                    .header__logo
-                        img.logo-img(src="./src/img/favicon.png", alt="")
-
+                        img.logo-img(src="./src/img/favicon.png" alt="")
                         .logo-text Hobby
 
                     ul.nav
@@ -33,52 +27,35 @@ html(lang="en")
 
                         button.header__button Login
 
-                section.hero
-                    .hero__title Make a
-                        span Beautiful Garden
-                        | with Your own Hand
-                    .hero__description There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
-                    button.hero__button Shop Now
+            section.hero
+                h1.hero__title 
+                    | Make a 
+                    span Beautiful Garden
+                    | with Your own Hand
+                p.hero__description There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.
+                button.hero__button Shop Now
+                    img.button-img(src="./src/img/hero-button-arrow.png" alt="")
 
-                        img.button-img(src="./hero-button-arrow.png" alt="")
+                img.hero__img(src="./src/img/hero-img.png" alt="")
 
-                    img.hero__img(src="./hero-img.png" alt="")
+                img.hero__decoration-arrow(src="./src/img/decoration-arrow.png" alt="")
+                img.hero__decoration-cactus(src="./src/img/decoration-cactus.png" alt="")
 
-                    img.hero__decoration-arrow(src="./decoration-arrow.png" alt="")
-                    img.hero__decoration-cactus(src="./decoration-cactus.png" alt="")
-
-                        img.button-img(src="./src/img/hero-button-arrow.png", alt="")
-
-                    img.hero__img(src="./src/img/hero-img.png", alt="")
-
-
-                    img.hero__decoration-arrow(src="./src/img/decoration-arrow.png", alt="")
-                    img.hero__decoration-cactus(src="./src/img/decoration-cactus.png", alt="")
-        
             section.profesional-garden
                 .df-photo
-
-                    img.profesional-garden__photo-garden(src="/photo-profisional.png" alt="")
-
-                    img.profesional-garden__photo-garden(src="./src/img/photo-profisional.png", alt="")
+                    img.profesional-garden__photo-garden(src="./src/img/photo-profisional.png" alt="")
 
                 .df-text
                     h1.profesional-garden__big-green-text We Are Professional Gardener!
                     p.profesional-garden__paragraph-text Morbi magna metus, scelerisque at risus a, tristique laoreet orci. Duis posuere eros vel dui pulvinar, pulvinar molestie erat iaculis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia.
                     .df-button     
                         button.profesional-garden__read-more Read More
+                            img.read-more__photo-button(src="./src/img/button-green.png" alt="")
+                        img.profesional-garden__img-button(src="./src/img/Group.png" alt="")
 
-                            img.read-more__photo-button(src="/button-green.png" alt="")
-                        img.profesional-garden__img-button(src="/Group.png" alt="")
-
-              
-         section.survey-form
-            h1.survey-form__title Ready to bring idea for your garden?
-            p.survey-form__text I must explain to you how all this mistaken idea of denouncing      pleasure and  praising pain was born and I will give you a complete
-            form.form(action="")
-                input.form__input(type="text")(placeholder="Enter your email...")
-                button.form__buttons Subscribe
-
-                            img.read-more__photo-button(src="./src/img/button-green.png", alt="")
-                        img.profesional-garden__img-button(src="./src/img/Group.png", alt="")
-
+            section.survey-form
+                h1.survey-form__title Ready to bring idea for your garden?
+                p.survey-form__text I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete explanation.
+                form.form(action="")
+                    input.form__input(type="text" placeholder="Enter your email...")
+                    button.form__buttons Subscribe
