--- a/style.css
+++ b/style.css
@@ -1,173 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
+@import url(https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap);
 @import url(https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap);
 @import url(https://fonts.googleapis.com/css2?family=Questrial&display=swap);
 @import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
 @import url(https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap);
-
-body {
-  font-family: "Questrial", sans-serif;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-}
-
-.survey-form {
-  margin-left: 215px;
-  width: 1170px;
-  height: 508px;
-  border-radius: 19px;
-  background: rgb(248, 248, 248);
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
-
-.survey-form__title {
-  font-family: "Fredoka One", display;
-  margin-top: 95px;
-  font-weight: 400;
-  font-size: 36px;
-  line-height: 60px;
-  text-align: center;
-  color: rgb(55, 74, 61);
-}
-
-.survey-form__text {
-  width: 626.1016845703px;
-  margin-top: 30px;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 32px;
-  text-align: center;
-  color: rgb(103, 133, 112);
-}
-
-.form {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 50px;
-  width: 657px;
-  height: 81px;
-  top: 3775.44px;
-  left: 471.19px;
-  border-radius: 10px;
-  border: rgb(12, 169, 65) 1px solid;
-  background: rgb(255, 255, 255);
-  margin-bottom: 200px !important;
-}
-
-.form__input {
-  width: 128px;
-  height: 32px;
-  border: none;
-  margin-left: 33px;
-}
-
-.form__buttons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 223px;
-  height: 81px;
-  border-radius: 10px;
-  background: rgb(12, 169, 65);
-  border: none;
-  color: rgb(255, 255, 255);
-}
-
-.group-text {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-}
-
-.section-box {
-  width: 1170px;
-  height: 234.6785430908px;
-  top: 985.75px;
-  left: 215px;
-  border-radius: 28px;
-  background: #ffffff;
-  padding: 10px;
-  box-sizing: border-box;
-=======
-@import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
-@import url(https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap);
-.profesional-garden {
-
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 527px;
-  padding: 114px 220px;
-}
-.profesional-garden__big-green-text {
-  width: 353px;
-  height: 79.209px;
-  flex-shrink: 0;
-  color: #374A3D;
-  font-family: "Fredoka One";
-  font-size: 36px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 44px;
-  font-variant: small-caps;
-}
-.profesional-garden__paragraph-text {
-  font-family: Questrial;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 32px;
-  letter-spacing: 0%;
-  width: 457px;
-  height: 125px;
-  top: 1521.53px;
-  left: 912.08px;
-  color: #678570;
-}
-.profesional-garden__read-more {
-  font-family: Questrial;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 18px;
-  letter-spacing: 0%;
-  text-align: center;
-  width: 179px;
-  height: 67px;
-  top: 1686.77px;
-  left: 912.08px;
-  border-width: 2px;
-  display: flex;
-  gap: 5px;
-  justify-content: center;
-  align-items: center;
-  padding: 10px 20px;
-  border: 2px solid #0CA941;
-  border-radius: 50%;
-}
-
-.df-text {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 457.917px;
-  height: 383.741px;
-  flex-shrink: 0;
-}
-
-.df-photo {
-  width: 637px;
-  height: 527px;
-}
-
-.df-button {
-  display: flex;
-  align-items: center;
-  gap: 30px;
-}
-
 body {
   display: flex;
   justify-content: center;
@@ -189,7 +25,7 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 48px 215px;
+  padding: 28px 215px 0 215px;
 }
 .header__logo {
   display: flex;
@@ -303,4 +139,142 @@ body {
   position: absolute;
   bottom: 210px;
   left: 452px;
+}
+
+.survey-form {
+  width: 1170px;
+  height: 508px;
+  border-radius: 19px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background: #F8F8F8;
+  margin-left: 218px;
+}
+
+.survey-form__title {
+  font-family: "Fredoka One", display;
+  margin-top: 95px;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 60px;
+  text-align: center;
+  color: rgb(55, 74, 61);
+}
+
+.survey-form__text {
+  width: 626.1016845703px;
+  margin-top: 30px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 32px;
+  text-align: center;
+  color: rgb(103, 133, 112);
+}
+
+.form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 50px;
+  width: 657px;
+  height: 81px;
+  top: 3775.44px;
+  left: 471.19px;
+  border-radius: 10px;
+  border: rgb(12, 169, 65) 1px solid;
+  background: rgb(255, 255, 255);
+  margin-bottom: 200px !important;
+}
+
+.form__input {
+  width: 128px;
+  height: 32px;
+  border: none;
+  margin-left: 33px;
+}
+
+.form__buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 223px;
+  height: 81px;
+  border-radius: 10px;
+  background: rgb(12, 169, 65);
+  border: none;
+  color: rgb(255, 255, 255);
+}
+
+.profesional-garden {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 527px;
+  padding: 114px 220px;
+}
+.profesional-garden__big-green-text {
+  width: 353px;
+  height: 79.209px;
+  flex-shrink: 0;
+  color: #374A3D;
+  font-family: "Fredoka One";
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 44px;
+  font-variant: small-caps;
+}
+.profesional-garden__paragraph-text {
+  font-family: Questrial;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 32px;
+  letter-spacing: 0%;
+  width: 457px;
+  height: 125px;
+  top: 1521.53px;
+  left: 912.08px;
+  color: #678570;
+}
+.profesional-garden__read-more {
+  font-family: Questrial;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 18px;
+  letter-spacing: 0%;
+  text-align: center;
+  width: 179px;
+  height: 67px;
+  top: 1686.77px;
+  left: 912.08px;
+  border-width: 2px;
+  display: flex;
+  gap: 5px;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 20px;
+  border: 2px solid #0CA941;
+  border-radius: 50%;
+}
+
+.df-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 457.917px;
+  height: 383.741px;
+  flex-shrink: 0;
+}
+
+.df-photo {
+  width: 637px;
+  height: 527px;
+}
+
+.df-button {
+  display: flex;
+  align-items: center;
+  gap: 30px;
 }/*# sourceMappingURL=style.css.map */
