додана анімація при наведенні в header та hero секції

--- a/_stanislav-section.sass
+++ b/_stanislav-section.sass
@@ -1,12 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap')
-@import url(https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap)
-
 .profesional-garden
     display: flex
     justify-content: space-between
     align-items: center
     height: 527px
     padding: 114px 220px
+    margin-top: 150px
 
     &__big-green-text
         width: 353px
