--- a/index.pug
+++ b/index.pug
@@ -27,19 +27,17 @@ html(lang="en")
 
                         button.header__button Login
 
-            section.hero
-                h1.hero__title 
-                    | Make a 
-                    span Beautiful Garden
-                    | with Your own Hand
-                p.hero__description There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.
-                button.hero__button Shop Now
-                    img.button-img(src="./src/img/hero-button-arrow.png" alt="")
+                section.hero
+                    h1.hero__title Make a 
+                        span Beautiful Garden
+                        |  with Your own Hand
+                    p.hero__description There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.
+                    button.hero__button Shop Now
+                        img.button-img(src="./src/img/hero-button-arrow.png" alt="")
+                        img.hero__decoration-arrow(src="./src/img/decoration-arrow.png" alt="")
 
-                img.hero__img(src="./src/img/hero-img.png" alt="")
-
-                img.hero__decoration-arrow(src="./src/img/decoration-arrow.png" alt="")
-                img.hero__decoration-cactus(src="./src/img/decoration-cactus.png" alt="")
+                    img.hero__img(src="./src/img/hero-img.png" alt="")
+                    img.hero__decoration-cactus(src="./src/img/decoration-cactus.png" alt="")
 
             section.profesional-garden
                 .df-photo
