Stas-section-number2 26.02.20205

--- a/_stanislav-section.sass
+++ b/_stanislav-section.sass
@@ -1,36 +1,51 @@
+*
+    font-family: "Questrial", serif
+    padding: 0
+    margin: 0
+    box-sizing: border-box
 
 .group-text
     display: flex
-    flex-direction: column
-    align-items: flex-start
-    justify-content: center
+
+    &__df-text-palma
+        display: flex
+        justify-content: center
+        flex-direction: column
+        align-items: flex-start
+
+    &__photo-palma
+        text-align: center
 
 .section-box
-    width: 1170px
-    height: 234.6785430908203px
+    width: 1350px
+    height: 234.6785430908px
     top: 985.75px
     left: 215px
     border-radius: 28px
     background: #ffffff
-    padding: 10px
+    padding: 0
+    margin: 0
     box-sizing: border-box
     display: flex
-    justify-content: space-between
+    justify-content: center
     align-items: center
+    gap: 60px
+
     &__big-black-text
         font-family: Fredoka One
         font-weight: 400
         font-size: 30px
         line-height: 40px
         letter-spacing: 0%
-        width: 289.526123046875px
-        height: 86.58434295654297px
+        width: 289.5261230469px
+        height: 86.5843429565px
         top: 1034.39px
         left: 366.51px
         color: #374A3D
+
     &__paragraph-text
-        width: 310.9908752441406px
-        height: 50.51301574707031px
+        width: 310.9908752441px
+        height: 50.5130157471px
         top: 1130.11px
         left: 366.51px
         font-family: Gilroy
@@ -39,16 +54,19 @@
         line-height: 26px
         letter-spacing: 0%
         color: #5B7262
+
     &__numbers
         font-weight: 800
         font-size: 60px
         line-height: 42px
         letter-spacing: 0%
         color: #0CA941
+
     &__down-numbers
+        margin: 0
         font-weight: 400
-        font-size: 36px
-        line-height: 42px
+        font-size: 22px
+        line-height: 32px
         letter-spacing: 0%
         color: #678570
 
@@ -59,7 +77,6 @@
     top: 1362px
     left: 218px
     display: flex
-    padding: 114px 220px
 
     &__big-green-text
         font-family: "Questrial", serif
@@ -72,6 +89,7 @@
         top: 1411.74px
         left: 912.08px
         color: #374A3D
+
     &__paragraph-text
         font-family: Gilroy
         font-weight: 500
@@ -83,6 +101,7 @@
         top: 1521.53px
         left: 912.08px
         color: #678570
+
     &__read-more
         font-family: Gilroy
         font-weight: 600
@@ -114,14 +133,17 @@
     height: 383px
     top: 1411.74px
     left: 912.08px
+
 .df-photo
     width: 637px
     height: 527px
     top: 1362.61px
     left: 218px
+
 .df-button
     display: flex
     gap: 30px
+
 .group-text-complete
     display: flex
     justify-content: center
