--- a/index.pug
+++ b/index.pug
@@ -40,6 +40,21 @@ html(lang="en")
                     img.hero__decoration-arrow(src="./decoration-arrow.png", alt="")
                     img.hero__decoration-cactus(src="./decoration-cactus.png", alt="")
 
+            section.section-box    
+                .group-text 
+                    img.group-text__photo-palma(src="/palma.png", alt="")
+                    .group-text__df-text-palma
+                        h1.section-box__big-black-text We Give Awesome Landscape Service.
+                        p.section-box__paragraph-text It is a long established fact that a reader will be distracted by the thing.
+                .group-text-complete 
+                        h1.section-box__numbers 25+
+                        p.section-box__down-numbers Complete Project Per Month
+                .group-text-complete 
+                        h1.section-box__numbers 10+
+                        p.section-box__down-numbers Years Practical Experience.
+                .group-text-complete 
+                        h1.section-box__numbers 60+
+                        p.section-box__down-numbers Awesome Team Members.        
             section.profesional-garden
                 .df-photo
                     img.profesional-garden__photo-garden(src="/photo-profisional.png", alt="")
