--- a/style.css
+++ b/style.css
@@ -1,24 +1,39 @@
 @import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
 @import url(https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap);
+* {
+  font-family: "Questrial", serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .group-text {
   display: flex;
+}
+.group-text__df-text-palma {
+  display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
+}
+.group-text__photo-palma {
+  text-align: center;
 }
 
 .section-box {
-  width: 1170px;
+  width: 1350px;
   height: 234.6785430908px;
   top: 985.75px;
   left: 215px;
   border-radius: 28px;
   background: #ffffff;
-  padding: 10px;
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  gap: 60px;
 }
 .section-box__big-black-text {
   font-family: Fredoka One;
@@ -52,9 +67,10 @@
   color: #0CA941;
 }
 .section-box__down-numbers {
+  margin: 0;
   font-weight: 400;
-  font-size: 36px;
-  line-height: 42px;
+  font-size: 22px;
+  line-height: 32px;
   letter-spacing: 0%;
   color: #678570;
 }
@@ -66,7 +82,6 @@
   top: 1362px;
   left: 218px;
   display: flex;
-  padding: 114px 220px;
 }
 .profesional-garden__big-green-text {
   font-family: "Questrial", serif;
