--- a/style.sass
+++ b/style.sass
@@ -24,11 +24,6 @@ body
         justify-content: center
         align-items: center
         gap: 10px
-        transition: all 0.5s ease
-
-    &__logo:hover
-        color: #0CA941
-        text-shadow: 0 25px 2px #0CA941
 
     &__button
         width: 110.166px
@@ -65,6 +60,11 @@ body
     line-height: 33.203px
     text-transform: capitalize
     cursor: pointer
+    transition: all 0.5s ease
+
+.logo-text:hover
+    color: #0CA941
+    text-shadow: 0 25px 2px #0CA941
 
 .nav
     display: flex
