+ секція від Стаса

--- a/_stanislav-section.sass
+++ b/_stanislav-section.sass
@@ -1,22 +1,93 @@
+.group-text
+    display: flex
+
+    &__df-text-palma
+        display: flex
+        justify-content: center
+        flex-direction: column
+        align-items: flex-start
+
+    &__photo-palma
+        text-align: center
+
+
+.section-box
+    width: 1350px
+    height: 234.6785430908px
+    top: 985.75px
+    left: 215px
+    border-radius: 28px
+    background: #ffffff
+    padding: 0
+    margin: 0
+    box-sizing: border-box
+    display: flex
+    justify-content: center
+    align-items: center
+    gap: 60px
+    margin: auto
+
+    &__big-black-text
+        font-family: Fredoka One
+        font-weight: 400
+        font-size: 30px
+        line-height: 40px
+        letter-spacing: 0%
+        width: 289.5261230469px
+        height: 86.5843429565px
+        top: 1034.39px
+        left: 366.51px
+        color: #374A3D
+
+    &__paragraph-text
+        width: 310.9908752441px
+        height: 50.5130157471px
+        font-family: Questrial
+        top: 1130.11px
+        left: 366.51px
+        font-family: Gilroy
+        font-weight: 500
+        font-size: 16px
+        line-height: 26px
+        letter-spacing: 0%
+        color: #5B7262
+
+    &__numbers
+        font-weight: 800
+        font-size: 60px
+        line-height: 42px
+        letter-spacing: 0%
+        color: #0CA941
+
+    &__down-numbers
+        margin: 0
+        font-weight: 400
+        font-size: 22px
+        line-height: 32px
+        letter-spacing: 0%
+        color: #678570
+
 .profesional-garden
+    margin-top: 100px
+    width: 1600px
     display: flex
     justify-content: space-between
     align-items: center
-    height: 527px
-    padding: 114px 220px
-    margin-top: 150px
+    padding: 50px 215px
+    box-sizing: border-box
 
     &__big-green-text
-        width: 353px
-        height: 79.209px
-        flex-shrink: 0
-        color: #374A3D
-        font-family: "Fredoka One"
-        font-size: 36px
-        font-style: normal
+        font-family: Fredoka One
         font-weight: 400
+        font-size: 36px
         line-height: 44px
-        font-variant: small-caps
+        letter-spacing: 0%
+        width: 353px
+        height: 79px
+        top: 1411.74px
+        left: 912.08px
+        color: #374A3D
+
     &__paragraph-text
         font-family: Questrial
         font-weight: 500
@@ -28,8 +99,9 @@
         top: 1521.53px
         left: 912.08px
         color: #678570
+
     &__read-more
-        font-family: Questrial
+        font-family: Gilroy
         font-weight: 600
         font-size: 18px
         line-height: 18px
@@ -47,22 +119,32 @@
         padding: 10px 20px
         border: 2px solid #0CA941
         border-radius: 50%
-
+        background: #ffffff
+        
 
 .df-text
     display: flex
     flex-direction: column
-    justify-content: space-between
-    width: 457.917px
-    height: 383.741px
-    flex-shrink: 0
+    justify-content: center
+    align-items: flex-start
+    gap: 35px
+    width: 457px
+    height: 383px
+    top: 1411.74px
+    left: 912.08px
 
 .df-photo
     width: 637px
     height: 527px
+    top: 1362.61px
+    left: 218px
 
 .df-button
     display: flex
-    align-items: center
     gap: 30px
 
+.group-text-complete
+    display: flex
+    justify-content: center
+    align-items: flex-start
+    flex-direction: column
