--- a/_seva-section.sass
+++ b/_seva-section.sass
@@ -7,6 +7,7 @@
     flex-direction: column
     align-items: center
     background: #F8F8F8
+    margin-top: 100px
     margin-left: 218px
 
 .survey-form__title
