--- a/index.pug
+++ b/index.pug
@@ -39,17 +39,32 @@ html(lang="en")
                     img.hero__img(src="./src/img/hero-img.png" alt="")
                     img.hero__decoration-cactus(src="./src/img/decoration-cactus.png" alt="")
 
-            section.profesional-garden
-                .df-photo
-                    img.profesional-garden__photo-garden(src="./src/img/photo-profisional.png" alt="")
+                section.section-box    
+                    .group-text 
+                        img.group-text__photo-palma(src="./src/img/palma.png", alt="")
+                        .group-text__df-text-palma
+                            h1.section-box__big-black-text We Give Awesome Landscape Service.
+                            p.section-box__paragraph-text It is a long established fact that a reader will be distracted by the thing.
+                    .group-text-complete 
+                        h1.section-box__numbers 25+
+                        p.section-box__down-numbers Complete Project Per Month
+                    .group-text-complete 
+                        h1.section-box__numbers 10+
+                        p.section-box__down-numbers Years Practical Experience.
+                    .group-text-complete 
+                        h1.section-box__numbers 60+
+                        p.section-box__down-numbers Awesome Team Members.  
 
-                .df-text
-                    h1.profesional-garden__big-green-text We Are Professional Gardener!
-                    p.profesional-garden__paragraph-text Morbi magna metus, scelerisque at risus a, tristique laoreet orci. Duis posuere eros vel dui pulvinar, pulvinar molestie erat iaculis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia.
-                    .df-button     
-                        button.profesional-garden__read-more Read More
-                            img.read-more__photo-button(src="./src/img/button-green.png" alt="")
-                        img.profesional-garden__img-button(src="./src/img/Group.png" alt="")
+                section.profesional-garden
+                    .df-photo
+                        img.profesional-garden__photo-garden(src="./src/img/photo-profisional.png", alt="")
+                    .df-text
+                        h1.profesional-garden__big-green-text We Are Professional Gardener!
+                        p.profesional-garden__paragraph-text Morbi magna metus, scelerisque at risus a, tristique laoreet orci. Duis posuere eros vel dui pulvinar, pulvinar molestie erat iaculis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia.
+                        .df-button     
+                            button.profesional-garden__read-more Read More
+                                img.read-more__photo-button(src="./src/img/button-green.png", alt="")
+                            img.profesional-garden__img-button(src="./src/img/Group.png", alt="")
 
             section.survey-form
                 h1.survey-form__title Ready to bring idea for your garden?
