--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
      -moz-user-select: none;
           user-select: none;
   margin: 0;
+  overflow-x: hidden;
 }
 
 .container {
@@ -41,6 +42,7 @@ body {
   font-style: normal;
   font-weight: 600;
   line-height: normal;
+  border: none;
   cursor: pointer;
   transition: all 0.5s ease;
 }
@@ -160,6 +162,19 @@ body {
   position: absolute;
   bottom: 210px;
   left: 452px;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #fff;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #0CA941;
+  border-radius: 100px;
 }
 
 .survey-form {
