--- a/style.sass
+++ b/style.sass
@@ -5,6 +5,7 @@ body
     justify-content: center
     user-select: none
     margin: 0
+    overflow-x: hidden
 
 .container
     position: relative
@@ -37,6 +38,7 @@ body
         font-style: normal
         font-weight: 600
         line-height: normal
+        border: none
         cursor: pointer
         transition: all 0.5s ease
 
@@ -152,6 +154,16 @@ body
         position: absolute
         bottom: 210px
         left: 452px
+
+::-webkit-scrollbar
+    width: 10px
+
+::-webkit-scrollbar-track
+    background: #fff
+
+::-webkit-scrollbar-thumb
+    background-color: #0CA941
+    border-radius: 100px
 
 @import "milana-section"
 @import "nastya-section"
