--- a/index.pug
+++ b/index.pug
@@ -72,3 +72,63 @@ html(lang="en")
                 form.form(action="")
                     input.form__input(type="text" placeholder="Enter your email...")
                     button.form__buttons Subscribe
+
+            footer.footer 
+                section.hobby 
+                    .hobby__hobby-name 
+                        img.hobby__hobby-icon(src="/src/img/hobby-icon.png", alt="")
+                        h3.hobby__hobby-title Hobby
+                    p.hobby__hobby-text There are many variations of pass is ages of Lorem  available, but the majority have suffered alteration in  injected humour.
+                    .hobby__hobby-links 
+                        a.hobby__hobby-link(href="")
+                            img.hobby__hobby-link-img1(src="src/img/facebook.svg", alt="")
+                        a.hobby__hobby-link(href="")
+                            img.hobby__hobby-link-img(src="src/img/twitter.svg", alt="")
+                        a.hobby__hobby-link(href="")
+                            img.hobby__hobby-link-img(src="src/img/pinterest.svg", alt="")
+                        a.hobby__hobby-link(href="")
+                            img.hobby__hobby-link-img(src="src/img/in.svg", alt="")
+                section.company 
+                    h3.company__title Company
+                    ul.company__items
+                        li.company__type
+                            a.company__link(href="") About
+                        li.company__type
+                            a.company__link(href="") History
+                        li.company__type
+                            a.company__link(href="") Vision & Mission
+                        li.company__type
+                            a.company__link(href="") Career
+                        li.company__type
+                            a.company__link(href="") Legal Notice
+                        li.company__type
+                                a.company__link(href="") Blog & News
+                section.support 
+                    h3.support__title Support
+                        ul.support__items
+                            li.support__type
+                                a.support__link(href="") Contact
+                            li.support__type
+                                a.support__link(href="") FAQ
+                            li.support__type
+                                a.support__link(href="") Help Center
+                            li.support__type
+                                a.support__link(href="") Privacy Policy
+                            li.support__type
+                                a.support__link(href="") Term & Service
+                            li.support__type
+                                a.support__link(href="") Community
+                section.contact 
+                    h3.contact__title Contact
+                    p.contact__text Mirabazar-Subhanighat Rd, Sylhet-Bangladesh
+                    h5.contact__email-title Email Us
+                    p.contact__email-text useremail@gmail.com
+                    h5.contact__telephone-title Call Us
+                    a.contact__telephone-num(href="tel:+6221.2002.2012") +6221.2002.2012
+                section.plants 
+                    img.plants__footer-line(src="src/img/footer-line.png", alt="")
+                    img.plants__plant1(src="src/img/plant1.png", alt="")
+                    img.plants__plant2(src="src/img/plant2.png", alt="")
+                    img.plants__plant3(src="src/img/plant3.png", alt="")
+                    img.plants__plant4(src="src/img/plant4.png", alt="")
+                    img.plants__plant5(src="src/img/plant5.png", alt="")
